--- a/registration.html
+++ b/registration.html
@@ -15,7 +15,7 @@
   <link href="mainMenu.css" rel="stylesheet" />
 
   <style>
-    #divToJustifyContent {
+    /* #divToJustifyContent {
       height: 85vh;
       background: no-repeat url(pictures/dropping-water-grey.jpg);
       background-size: cover;
@@ -45,7 +45,65 @@
     #divToJustifyContent button:hover {
       background-color: rgb(0, 0, 129);
       border-color: rgb(0, 0, 129);
+    } */
+
+    #background {
+      height: 85vh;
+      background: no-repeat url(pictures/hill&clouds.jpg);
+      background-size: cover;
+      background-position: 5%;
+      background-attachment: fixed;
     }
+
+    .form-signin {
+      max-width: 330px;
+      padding-top: 22vh;
+    }
+
+    .form-signin .form-floating:focus-within {
+      z-index: 2;
+    }
+
+    #viewingHorizontally {
+      display: flex;
+      flex-direction: row;
+    }
+
+    #floatingName  {
+      margin-bottom: -1px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+
+    #floatingSurname {
+      margin-bottom: -1px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+      border-top-left-radius: 0;
+    }
+
+    .form-signin input[type="email"] {
+      margin-bottom: -1px;
+      border-radius: 0;
+    }
+
+    #floatingPassword {
+      margin-bottom: -1px;
+      border-radius: 0;
+    }
+
+    .form-signin input[type="password"] {
+      margin-bottom: 30px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+
+    .form-signin button {
+      background-color: rgb(0, 0, 87);
+      border-color: rgb(0, 0, 87);
+    }
+
   </style>
 </head>
 
@@ -68,7 +126,42 @@
     </div>
   </nav>
 
-  <div id="divToJustifyContent">
+  <div id="background">
+    <main class="form-signin w-100 m-auto">
+      <form action="loggingin.html">
+        <!-- <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+        <h1 class="h3 mb-3 fw-normal">Please sign in</h1> -->
+
+        <div id="viewingHorizontally">
+          <div class="form-floating">
+            <input type="text" class="form-control" id="floatingName" required>
+            <label for="floatingPasswor">Imię</label>
+          </div>
+          <div class="form-floating">
+            <input type="text" class="form-control" id="floatingSurname" required>
+            <label for="floatingPasswor">Nazwisko</label>
+          </div>
+        </div>
+        <div class="form-floating">
+          <input type="email" class="form-control" id="floatingInput" required>
+          <label for="floatingInput">Email</label>
+        </div>
+        <div class="form-floating">
+          <input type="password" class="form-control" id="floatingPassword" required>
+          <label for="floatingPassword">Hasło</label>
+        </div>
+        <div class="form-floating">
+          <input type="password" class="form-control" id="floatingPasswordRepetition" required>
+          <label for="floatingPassword">Powtórz hasło</label>
+        </div>
+
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Zarejestruj się</button>
+        <!-- <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p> -->
+      </form>
+    </main>
+  </div>
+
+  <!-- <div id="divToJustifyContent">
     <div class="col-4 col-md-4 col-lg-5">
       <form class="needs-validation" novalidate>
         <div class="row g-3">
@@ -117,7 +210,7 @@
         <button class="w-90 btn btn-primary btn-lg mt-5" type="submit">Zarejestruj się</button>
       </form>
     </div>
-  </div>
+  </div> -->
 
 
   <!-- Header - set the background image for the header in the line below
