--- a/seeMonthlyBalance.html
+++ b/seeMonthlyBalance.html
@@ -106,7 +106,7 @@
 
 <body>
     <!-- Responsive navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#!">B O</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -124,10 +124,23 @@
         </div>
     </nav>
 
+    <!-- <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Company name</a>
+        <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
+        <div class="navbar-nav">
+          <div class="nav-item text-nowrap">
+            <a class="nav-link px-3" href="#">Sign out</a>
+          </div>
+        </div>
+      </header> -->
+
     <div class="container-fluid">
         <div class="row">
             <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-                <div class="position-sticky pt-3 sidebar-sticky">
+                <div class="position-sticky pt-3 sidebar-sticky mt-5">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">
@@ -206,16 +219,40 @@
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Dashboard</h1>
+                    <h1 class="h2">Przychody</h1>
                     <div class="btn-toolbar mb-2 mb-md-0">
-                        <div class="btn-group me-2">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+                        <div class="dropdown">
+                            <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <span data-feather="calendar" class="align-text-bottom"></span>
+                                Jaki okres?
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item active" href="#">Bieżący miesiąc</a></li>
+                                <li><a class="dropdown-item" href="#">Poprzedni miesiąc</a></li>
+                                <li><a class="dropdown-item" href="#">Bieżący rok</a></li>
+                                <li><a class="dropdown-item" href="#">Wybrany okres</a></li>
+                            </ul>
                         </div>
-                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                            <span data-feather="calendar" class="align-text-bottom"></span>
-                            This week
-                        </button>
+                        <div class="dropdown mx-1">
+                            <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <svg class="align-text-bottom" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-graph-up" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M0 0h1v15h15v1H0V0Zm14.817 3.113a.5.5 0 0 1 .07.704l-4.5 5.5a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61 4.15-5.073a.5.5 0 0 1 .704-.07Z"/>
+                                  </svg>
+                                Co przedstawić?
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item active" href="#">Bieżący miesiąc</a></li>
+                                <li><a class="dropdown-item" href="#">Poprzedni miesiąc</a></li>
+                                <li><a class="dropdown-item" href="#">Bieżący rok</a></li>
+                                <li><a class="dropdown-item" href="#">Wybrany okres</a></li>
+                            </ul>
+                        </div>
+                        <div class="btn-group me-2 mx-5">
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Udostępnij</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Eksportuj</button>
+                        </div>
                     </div>
                 </div>
 
@@ -406,7 +443,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <script>(() => {
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"
+        integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"
+        integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha"
+        crossorigin="anonymous"></script>
+    <script>
+        (() => {
             'use strict'
 
             feather.replace({ 'aria-hidden': 'true' })
@@ -418,23 +462,23 @@
                 type: 'line',
                 data: {
                     labels: [
-                        'Sunday',
-                        'Monday',
-                        'Tuesday',
-                        'Wednesday',
-                        'Thursday',
-                        'Friday',
-                        'Saturday'
+                        'Poniedziałek',
+                        'Wtorek',
+                        'Środa',
+                        'Czwartek',
+                        'Piątek',
+                        'Sobota',
+                        'Niedziela'
                     ],
                     datasets: [{
                         data: [
-                            15339,
-                            21345,
-                            18483,
-                            24003,
-                            23489,
-                            24092,
-                            12034
+                            153,
+                            213,
+                            184,
+                            240,
+                            234,
+                            240,
+                            0
                         ],
                         lineTension: 0,
                         backgroundColor: 'transparent',
@@ -456,7 +500,8 @@
                     }
                 }
             })
-        })()</script>
+        })()
+    </script>
 </body>
 
 </html>
