--- a/loggingin.html
+++ b/loggingin.html
@@ -6,12 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Full Width Pics - Start Bootstrap Template</title>
+  <title>Logowanie</title>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Rajdhani&display=swap"
     rel="stylesheet">
-  <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-  <!-- Core theme CSS (includes Bootstrap)-->
   <link href="mainMenu.css" rel="stylesheet" />
 
   <style>
@@ -19,7 +17,6 @@
       height: 85vh;
       background: no-repeat url(pictures/bieszczady.jpg);
       background-size: cover;
-      /* background-position: 5%; */
       background-attachment: fixed;
     }
 
@@ -44,11 +41,6 @@
       border-top-right-radius: 0;
     }
 
-    /* .form-signin button {
-      background-color: rgb(0, 0, 87);
-      border-color: rgb(0, 0, 87);
-    } */
-
     #rememberMe {
       color: white;
     }
@@ -57,7 +49,6 @@
 </head>
 
 <body>
-  <!-- Responsive navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#!">B O</a>
@@ -78,9 +69,6 @@
   <div id="background">
     <main class="form-signin w-100 m-auto">
       <form action="seeMonthlyBalance.html">
-        <!-- <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1> -->
-
         <div class="form-floating">
           <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
           <label for="floatingInput">Email</label>
@@ -96,62 +84,16 @@
           </label>
         </div>
         <button class="w-100 btn btn-lg btn-success" type="submit">Zaloguj się</button>
-        <!-- <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p> -->
       </form>
     </main>
   </div>
 
-
-  <!-- Header - set the background image for the header in the line below
-        <header class="py-1 bg-image-full" style="background-image: url('https://source.unsplash.com/wfh8dDlNFOk/1600x900')">
-            <div class="text-center my-5">
-                <img class="img-fluid rounded-circle mb-4" src="https://dummyimage.com/150x150/6c757d/dee2e6.jpg" alt="..." />
-                <h1 class="text-white fs-3 fw-bolder">B  O</h1>
-                <p class="text-white-50 mb-0">BUDŻET OSOBISTY</p>
-            </div>
-        </header>
-        Content section
-        <section class="py-0">
-            <div class="container my-5">
-                <div class="row justify-content-center">
-                    <div class="col-lg-6">
-                        <p class="display-6">Budżet osobisty powstał, aby pomóc w efektywnym zarządzaniu finansami.</p>
-                        <br>
-                        <p class="lead text-center"><strong>Dlaczego porządek w tym obszarze jest ważny?</strong></p>
-                        <br>
-                        <p class="lead"><b class="mainMenuLogo">B  O</b> &nbsp; jesteś bardziej świadomy obiegu swoich pieniędzy.</p>
-                        <p class="lead"><b class="mainMenuLogo">B  O</b> &nbsp; stać Cię na więcej.</p>
-                        <p class="lead text-center"><b class="mainMenuLogo">B  O</b></p>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-  <!-- Image element - set the background image for the header in the line below
-        <div class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/4ulffa6qoKA/1200x800')">
-            Put anything you want here! The spacer below with inline CSS is just for demo purposes!
-            <div style="height: 20rem"></div>
-        </div>
-        Content section
-        <section class="py-5">
-            <div class="container my-5">
-                <div class="row justify-content-center">
-                    <div class="col-lg-6">
-                        <h2>Engaging Background Images</h2>
-                        <p class="lead">The background images used in this template are sourced from Unsplash and are open source and free to use.</p>
-                        <p class="mb-0">I can't tell you how many people say they were turned off from science because of a science teacher that completely sucked out all the inspiration and enthusiasm they had for the course.</p>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-  <!-- Footer-->
   <footer class="py-1 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Budżet Osobisty 2022</p>
     </div>
   </footer>
-  <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Core theme JS-->
   <script src="js/scripts.js"></script>
 </body>
 
