--- a/registration.html
+++ b/registration.html
@@ -11,72 +11,12 @@
     rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <link href="mainMenu.css" rel="stylesheet" />
-
-  <style>
-    #background {
-      height: 85vh;
-      background: no-repeat url(pictures/hill&clouds.jpg);
-      background-size: cover;
-      background-position: 5%;
-      background-attachment: fixed;
-    }
-
-    .form-signin {
-      max-width: 330px;
-      padding-top: 22vh;
-    }
-
-    .form-signin .form-floating:focus-within {
-      z-index: 2;
-    }
-
-    #viewingHorizontally {
-      display: flex;
-      flex-direction: row;
-    }
-
-    #floatingName  {
-      margin-bottom: -1px;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0;
-      border-top-right-radius: 0;
-    }
-
-    #floatingSurname {
-      margin-bottom: -1px;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0;
-      border-top-left-radius: 0;
-    }
-
-    .form-signin input[type="email"] {
-      margin-bottom: -1px;
-      border-radius: 0;
-    }
-
-    #floatingPassword {
-      margin-bottom: -1px;
-      border-radius: 0;
-    }
-
-    .form-signin input[type="password"] {
-      margin-bottom: 30px;
-      border-top-left-radius: 0;
-      border-top-right-radius: 0;
-    }
-
-    .form-signin button {
-      background-color: rgb(0, 0, 87);
-      border-color: rgb(0, 0, 87);
-    }
-
-  </style>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#!">B O</a>
+      <a class="navbar-brand" href="mainMenu.html">B O</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
           class="navbar-toggler-icon"></span></button>
@@ -91,31 +31,31 @@
     </div>
   </nav>
 
-  <div id="background">
-    <main class="form-signin w-100 m-auto">
+  <div id="registration-background">
+    <main class="form-signin w-100 m-auto" id="registration-form-signin">
       <form action="loggingin.html">
 
-        <div id="viewingHorizontally">
+        <div id="registration-viewingHorizontally">
           <div class="form-floating">
-            <input type="text" class="form-control" id="floatingName" required>
-            <label for="floatingPasswor">Imię</label>
+            <input type="text" class="form-control" id="registration-floatingName" required>
+            <label for="registration-floatingName">Imię</label>
           </div>
           <div class="form-floating">
-            <input type="text" class="form-control" id="floatingSurname" required>
-            <label for="floatingPasswor">Nazwisko</label>
+            <input type="text" class="form-control" id="registration-floatingSurname" required>
+            <label for="registration-floatingSurname">Nazwisko</label>
           </div>
         </div>
         <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInput" required>
-          <label for="floatingInput">Email</label>
+          <input type="email" class="form-control" id="registration-floatingInput" required>
+          <label for="registration-floatingInput">Email</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" required>
-          <label for="floatingPassword">Hasło</label>
+          <input type="password" class="form-control" id="registration-floatingPassword" required>
+          <label for="registration-floatingPassword">Hasło</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPasswordRepetition" required>
-          <label for="floatingPassword">Powtórz hasło</label>
+          <input type="password" class="form-control" id="registration-floatingPasswordRepetition" required>
+          <label for="registration-floatingPassword">Powtórz hasło</label>
         </div>
 
         <button class="w-100 btn btn-lg btn-primary" type="submit">Zarejestruj się</button>
