Changed file names

--- a/seeWeeklyIncomeBalance.html
+++ b/seeWeeklyIncomeBalance.html
@@ -10,13 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Rajdhani&display=swap"
         rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <link href="mainMenu.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="balance-navbar">
         <div class="container">
-            <a class="navbar-brand" href="seeMonthlyBalance.html">B O</a>
+            <a class="navbar-brand" href="seeWeeklyIncomeBalance.html">B O</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -239,7 +239,7 @@
                                 </form>
                             </div>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="mainMenu.html" id="exit"> &nbsp;<svg
+                        <li class="nav-item"><a class="nav-link" href="aboutProject-MainSite.html" id="exit"> &nbsp;<svg
                                     xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                     class="bi bi-box-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
@@ -294,7 +294,7 @@
                         &nbsp;&nbsp;Dodaj przychód
                     </button>
                     <div class="collapse mb-3" id="collapseExample">
-                        <form action="seeMonthlyBalance.html"
+                        <form action="seeWeeklyIncomeBalance.html"
                             class="needs-validation d-flex flex-column align-items-center">
                             <div class="row g-2 mb-3">
                                 <div class="col-md-3">
