--- a/aboutProject-MainSite.html
+++ b/aboutProject-MainSite.html
@@ -8,16 +8,16 @@
         <title>O projekcie</title>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Rajdhani&display=swap" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <link href="mainMenu.css" rel="stylesheet" />
+        <link href="style.css" rel="stylesheet" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="mainMenu.html">B  O</a>
+                <a class="navbar-brand" href="aboutProject-MainSite.html">B  O</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-0 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="mainMenu.html"><small>O projekcie</small></a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="aboutProject-MainSite.html"><small>O projekcie</small></a></li>
                         <li class="nav-item"><a class="nav-link" href="registration.html"><small>Rejestracja</small></a></li>
                         <li class="nav-item"><a class="nav-link" href="loggingin.html"><small>Logowanie</small></a></li>
                     </ul>
