--- a/loggingin.html
+++ b/loggingin.html
@@ -10,19 +10,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Rajdhani&display=swap"
     rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-  <link href="mainMenu.css" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="mainMenu.html">B O</a>
+      <a class="navbar-brand" href="aboutProject-MainSite.html">B O</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
           class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-0 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" aria-current="page" href="mainMenu.html"><small>O
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="aboutProject-MainSite.html"><small>O
                 projekcie</small></a></li>
           <li class="nav-item"><a class="nav-link" href="registration.html"><small>Rejestracja</small></a></li>
           <li class="nav-item"><a class="nav-link active" href="loggingin.html"><small>Logowanie</small></a></li>
@@ -33,7 +33,7 @@
 
   <div id="loggingIn-background">
     <main class="form-signin w-100 m-auto" id="loggingIn-form-signin">
-      <form action="seeMonthlyBalance.html">
+      <form action="seeWeeklyIncomeBalance.html">
         <div class="form-floating">
           <input type="email" class="form-control" id="loggingIn-floatingInput" placeholder="name@example.com" required>
           <label for="loggingIn-floatingInput">Email</label>
