Fixed bugs after files validation

--- a/aboutProject-MainSite.html
+++ b/aboutProject-MainSite.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
         <title>O projekcie</title>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Rajdhani&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <link href="style.css" rel="stylesheet" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -30,7 +30,7 @@
                 <p class="text-white-50 mb-0">BUDŻET OSOBISTY</p>
             </div>
         </header>
-        <section class="py-0">
+        <div class="py-0">
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
 
         <footer class="py-0 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Budżet Osobisty 2022</p></div>
