--- a/seeWeeklyIncomeBalance.html
+++ b/seeWeeklyIncomeBalance.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <title>Bilans tygodniowy</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Rajdhani&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <link href="style.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -189,7 +189,7 @@
                                 </svg>
                             </a>
                             <div class="collapse" id="choosenCollapse">
-                                <form action="">
+                                <form action="#">
                                     <div class="mx-4 col-2 col-lg-6">
                                         <label for="firstDate" class="form-label text-white">OD:</label>
                                         <input type="date" class="form-control" id="firstDate" required>
@@ -307,7 +307,7 @@
                                 </div>
                                 <div class="col-md-3">
                                     <label for="date" class="form-label">Data</label>
-                                    <input type="date" class="form-control" id="date" placeholder="" required>
+                                    <input type="date" class="form-control" id="date" required>
                                     <div class="invalid-feedback">
                                         Data jest wymagana.
                                     </div>
