--- a/loggingin.html
+++ b/loggingin.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
   <title>Logowanie</title>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Rajdhani&display=swap"
     rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-  <link href="style.css" rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
