Added new function to editing button in see balance site

--- a/loggingin.html
+++ b/loggingin.html
@@ -33,7 +33,7 @@
 
   <div id="loggingIn-background">
     <main class="form-signin w-100 m-auto" id="loggingIn-form-signin">
-      <form action="seeWeeklyIncomeBalance.html">
+      <form action="seeFinancialBalance/seeWeeklyIncomeBalance.html">
         <div class="form-floating">
           <input type="email" class="form-control" id="loggingIn-floatingInput" placeholder="name@example.com" required>
           <label for="loggingIn-floatingInput">Email</label>
