Fixed styling effects

--- a/loggingin.html
+++ b/loggingin.html
@@ -35,11 +35,11 @@
     <main class="form-signin w-100 m-auto" id="loggingIn-form-signin">
       <form action="seeFinancialBalance/seeWeeklyIncomeBalance.html">
         <div class="form-floating">
-          <input type="email" class="form-control" id="loggingIn-floatingInput" placeholder="name@example.com" required>
+          <input type="email" class="form-control" id="loggingIn-floatingInput" placeholder="sth" required>
           <label for="loggingIn-floatingInput">Email</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="loggingIn-floatingPassword" placeholder="Password" required>
+          <input type="password" class="form-control" id="loggingIn-floatingPassword" placeholder="sth" required>
           <label for="loggingIn-floatingPassword">Hasło</label>
         </div>
 
