--- a/registration.html
+++ b/registration.html
@@ -34,27 +34,26 @@
   <div id="registration-background">
     <main class="form-signin w-100 m-auto" id="registration-form-signin">
       <form action="loggingin.html">
-
         <div id="registration-viewingHorizontally">
           <div class="form-floating">
-            <input type="text" class="form-control" id="registration-floatingName" required>
+            <input type="text" class="form-control" id="registration-floatingName" placeholder="sth" required>
             <label for="registration-floatingName">Imię</label>
           </div>
           <div class="form-floating">
-            <input type="text" class="form-control" id="registration-floatingSurname" required>
+            <input type="text" class="form-control" id="registration-floatingSurname" placeholder="sth" required>
             <label for="registration-floatingSurname">Nazwisko</label>
           </div>
         </div>
         <div class="form-floating">
-          <input type="email" class="form-control" id="registration-floatingInput" required>
+          <input type="email" class="form-control" id="registration-floatingInput" placeholder="sth" required>
           <label for="registration-floatingInput">Email</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="registration-floatingPassword" required>
+          <input type="password" class="form-control" id="registration-floatingPassword" placeholder="sth" required>
           <label for="registration-floatingPassword">Hasło</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="registration-floatingPasswordRepetition" required>
+          <input type="password" class="form-control" id="registration-floatingPasswordRepetition" placeholder="sth" required>
           <label for="registration-floatingPassword">Powtórz hasło</label>
         </div>
 
