--- a/seeFinancialBalance/seeWeeklyIncomeBalance.html
+++ b/seeFinancialBalance/seeWeeklyIncomeBalance.html
@@ -9,7 +9,6 @@
     <title>Bilans tygodniowy</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Rajdhani&display=swap"
         rel="stylesheet">
-    <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico"> -->
     <link href="../style.css" rel="stylesheet">
 </head>
 
@@ -241,8 +240,8 @@
                                 </form>
                             </div>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="../aboutProject-MainSite.html" id="exit"> &nbsp;<svg
-                                    xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        <li class="nav-item"><a class="nav-link" href="../aboutProject-MainSite.html" id="exit">
+                                &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                     class="bi bi-box-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
@@ -393,7 +392,8 @@
                         <tbody id="deleteLink">
                             <tr id="rec1">
                                 <td class="dataToEdit">15</td>
-                                <td class="editionInput hide"><input class="amountEditionInput" type="text" placeholder="15"></td>
+                                <td class="editionInput hide"><input class="amountEditionInput" type="text"
+                                        placeholder="15"></td>
                                 <td class="dataToEdit">inne</td>
                                 <td class="editionInput hide">
                                     <select required>
@@ -460,7 +460,8 @@
                             </tr>
                             <tr id="rec2">
                                 <td class="dataToEdit">11</td>
-                                <td class="editionInput hide"><input class="amountEditionInput" type="text" placeholder="11"></td>
+                                <td class="editionInput hide"><input class="amountEditionInput" type="text"
+                                        placeholder="11"></td>
                                 <td class="dataToEdit">jedzenie</td>
                                 <td class="editionInput hide">
                                     <select required>
@@ -527,7 +528,8 @@
                             </tr>
                             <tr id="rec3">
                                 <td class="dataToEdit">12</td>
-                                <td class="editionInput hide"><input class="amountEditionInput" type="text" placeholder="12"></td>
+                                <td class="editionInput hide"><input class="amountEditionInput" type="text"
+                                        placeholder="12"></td>
                                 <td class="dataToEdit">transport</td>
                                 <td class="editionInput hide">
                                     <select>
@@ -593,7 +595,8 @@
                             </tr>
                             <tr id="rec4">
                                 <td class="dataToEdit">13</td>
-                                <td class="editionInput hide"><input class="amountEditionInput" type="text" placeholder="13"></td>
+                                <td class="editionInput hide"><input class="amountEditionInput" type="text"
+                                        placeholder="13"></td>
                                 <td class="dataToEdit">transport</td>
                                 <td class="editionInput hide">
                                     <select required>
@@ -620,7 +623,7 @@
                                 <td class="dataToEdit">8.11.2022</td>
                                 <td class="editionInput hide theDate"><input type="date" name="trip-start"
                                         value="2022-11-08" min="2018-01-01"></td>
-                                        <td class="dataToEdit"><button class="seeCommentButton hide"><svg
+                                <td class="dataToEdit"><button class="seeCommentButton hide"><svg
                                             xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                             fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
                                             <path
@@ -659,7 +662,8 @@
                             </tr>
                             <tr id="rec5">
                                 <td class="dataToEdit">103</td>
-                                <td class="editionInput hide"><input class="amountEditionInput" type="text" placeholder="103"></td>
+                                <td class="editionInput hide"><input class="amountEditionInput" type="text"
+                                        placeholder="103"></td>
                                 <td class="dataToEdit">telekomunikacja</td>
                                 <td class="editionInput hide">
                                     <select required>
@@ -686,7 +690,7 @@
                                 <td class="dataToEdit">9.11.2022</td>
                                 <td class="editionInput hide theDate"><input type="date" name="trip-start"
                                         value="2022-11-09" min="2018-01-01"></td>
-                                        <td class="dataToEdit"><button class="seeCommentButton hide"><svg
+                                <td class="dataToEdit"><button class="seeCommentButton hide"><svg
                                             xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                             fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
                                             <path
@@ -725,7 +729,8 @@
                             </tr>
                             <tr id="rec6">
                                 <td class="dataToEdit">15</td>
-                                <td class="editionInput hide"><input class="amountEditionInput" type="text" placeholder="15"></td>
+                                <td class="editionInput hide"><input class="amountEditionInput" type="text"
+                                        placeholder="15"></td>
                                 <td class="dataToEdit">inne</td>
                                 <td class="editionInput hide">
                                     <select required>
@@ -792,7 +797,8 @@
                             </tr>
                             <tr id="rec7">
                                 <td class="dataToEdit">4</td>
-                                <td class="editionInput hide"><input class="amountEditionInput" type="text" placeholder="4"></td>
+                                <td class="editionInput hide"><input class="amountEditionInput" type="text"
+                                        placeholder="4"></td>
                                 <td class="dataToEdit">opieka zdrowotna</td>
                                 <td class="editionInput hide">
                                     <select required>
@@ -859,7 +865,8 @@
                             </tr>
                             <tr id="rec8">
                                 <td class="dataToEdit">1500</td>
-                                <td class="editionInput hide"><input class="amountEditionInput" type="text" placeholder="1500"></td>
+                                <td class="editionInput hide"><input class="amountEditionInput" type="text"
+                                        placeholder="1500"></td>
                                 <td class="dataToEdit">inne</td>
                                 <td class="editionInput hide">
                                     <select required>
@@ -886,7 +893,7 @@
                                 <td class="dataToEdit">10.11.2022</td>
                                 <td class="editionInput hide theDate"><input type="date" name="trip-start"
                                         value="2022-11-10" min="2018-01-01"></td>
-                                        <td class="dataToEdit"><button class="seeCommentButton hide"><svg
+                                <td class="dataToEdit"><button class="seeCommentButton hide"><svg
                                             xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                             fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
                                             <path
@@ -906,8 +913,7 @@
                                                 d="M3.35 5.47c-.18.16-.353.322-.518.487A13.134 13.134 0 0 0 1.172 8l.195.288c.335.48.83 1.12 1.465 1.755C4.121 11.332 5.881 12.5 8 12.5c.716 0 1.39-.133 2.02-.36l.77.772A7.029 7.029 0 0 1 8 13.5C3 13.5 0 8 0 8s.939-1.721 2.641-3.238l.708.709zm10.296 8.884-12-12 .708-.708 12 12-.708.708z" />
                                         </svg></button>
                                 </td>
-                                <td class="editionInput hide"><textarea
-                                        placeholder=""></textarea></td>
+                                <td class="editionInput hide"><textarea placeholder=""></textarea></td>
                                 <td class="dataToEdit"><button class="editButton"><svg
                                             xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                             fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
@@ -937,7 +943,6 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="js/scripts.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"
         integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE"
         crossorigin="anonymous"></script>
@@ -945,57 +950,6 @@
         integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha"
         crossorigin="anonymous"></script>
     <script src="app.js"></script>
-    <script>
-        (() => {
-            'use strict'
-
-            feather.replace({ 'aria-hidden': 'true' })
-
-            const ctx = document.getElementById('myChart')
-            const myChart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: [
-                        'Poniedziałek',
-                        'Wtorek',
-                        'Środa',
-                        'Czwartek',
-                        'Piątek',
-                        'Sobota',
-                        'Niedziela'
-                    ],
-                    datasets: [{
-                        data: [
-                            153,
-                            213,
-                            184,
-                            240,
-                            234,
-                            240,
-                            0
-                        ],
-                        lineTension: 0,
-                        backgroundColor: 'transparent',
-                        borderColor: '#007bff',
-                        borderWidth: 4,
-                        pointBackgroundColor: '#007bff'
-                    }]
-                },
-                options: {
-                    scales: {
-                        yAxes: [{
-                            ticks: {
-                                beginAtZero: false
-                            }
-                        }]
-                    },
-                    legend: {
-                        display: false
-                    }
-                }
-            })
-        })()
-    </script>
 </body>
 
 </html>
