Changed see balance site name

--- a/seeFinancialBalance/seeWeeklyBalance.html
+++ b/seeFinancialBalance/seeWeeklyBalance.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="balance-navbar">
         <div class="container">
-            <a class="navbar-brand" href="seeWeeklyIncomeBalance.html">B O</a>
+            <a class="navbar-brand" href="seeWeeklyBalance.html">B O</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -47,7 +47,7 @@
                             <div class="collapse" id="currentWeekCollapse">
                                 <ul class="nav flex-column mb-2 blueHover">
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="#">
+                                        <a class="nav-link" href="#">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                 fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                 <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
@@ -62,7 +62,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">
+                                        <a class="nav-link active" href="#">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                 fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                 <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
@@ -255,7 +255,7 @@
             <main id="showBalanceMain" class="col-lg-9 ms-sm-auto col-lg-10 px-md-4">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Bieżący tydzień / Przychody</h1>
+                    <h1 class="h2">Bieżący tydzień / Wydatki</h1>
 
                     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         KLIKNIJ TU!
@@ -292,10 +292,10 @@
                     <button class="btn btn-primary mb-3" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                         <span data-feather="plus-circle" class="align-text-bottom"></span>
-                        &nbsp;&nbsp;Dodaj przychód
+                        &nbsp;&nbsp;Dodaj wydatek
                     </button>
                     <div class="collapse mb-3" id="collapseExample">
-                        <form action="seeWeeklyIncomeBalance.html"
+                        <form action="seeWeeklyBalance.html"
                             class="needs-validation d-flex flex-column align-items-center">
                             <div class="row g-2 mb-3">
                                 <div class="col-md-3">
